<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/my_linear_layout"

    android:background="@drawable/shape_login_screen"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <TextView
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/name"
        style="@style/text_color"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="100dp"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp">

        <EditText
            style="@style/text_color"
            android:id="@+id/date_picker"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:autofillHints=""

            android:hint="@string/select_dob"
            android:layout_marginTop="5dp"
            android:inputType="date" />

        <TextView
            style="@style/text_color"
            android:id="@+id/age"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="3dp"
            android:text="@string/age"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp">

        <TextView
            style="@style/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"/>

        <Spinner
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/password"
        style="@style/text_color"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:hint="@string/e_mail"
        android:inputType="textVisiblePassword"
        android:autofillHints="" />
    <EditText
        android:id="@+id/mobile_no"
        style="@style/text_color"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:hint="@string/mobile_number"
        android:inputType="number"

        android:autofillHints="" />
    <TextView

        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_type"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:id="@+id/radio_gp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="120dp">

        <RadioButton
            android:id="@+id/radio_savings"
            style="@style/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savings"/>
        <RadioButton
            android:id="@+id/radio_current"
            style="@style/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp">


    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        style="@style/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"

        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>
