<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_screen"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="87dp"
        android:contentDescription="@string/bank_logo"
        android:src="@drawable/bank_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/staff_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="100dp"
            android:layout_weight="1"
            android:background="@drawable/shape_login_button"
            android:contentDescription="@string/staff_login"
            android:text="@string/staff"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/customer_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/shape_login_button"
            android:text="@string/customer"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>