<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/shape_login_screen"
    tools:context=".view.StaffLoginFirstPage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="87dp"
        android:contentDescription="@string/bank_logo"
        android:src="@drawable/bank_logo" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ScrollViewCount">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <Button
        android:id="@+id/id_customer_selection"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:elevation="5dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/select_customer"
        android:textSize="16sp"
        android:textColor="#E31118"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_customerId_staffLogin"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_your_customer_id"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:startIconTint="@color/black"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/account_circle"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:boxStrokeWidthFocused="3dp"
        app:boxStrokeColor="@color/black"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/id_signIn_customer_from_staffLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:elevation="5dp"
                android:background="@drawable/shape_login_button"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone"/>

    <Button
        android:id="@+id/id_new_customer_creation"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:elevation="5dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/create_new_account"
        android:textSize="16sp"
        android:textColor="#E31118"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/id_view_interest_rate"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:elevation="5dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/view_interest_rate"
        android:textSize="16sp"
        android:textColor="#E31118"
        android:textStyle="bold"/>
            <TextView
                android:id="@+id/id_savings_interest"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:text="@string/savings"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:textColor="#E31118"
                android:textStyle="bold"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/id_current_interest"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/current"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#E31118"
                android:textStyle="bold"
                android:visibility="gone"/>
    <Button
        android:id="@+id/id_total_no_of_customers"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:elevation="5dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/total_no_of_customer"
        android:textSize="16sp"
        android:textColor="#E31118"
        android:textStyle="bold"/>

            <TextView
                android:id="@+id/id_customer_count"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/count"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#E31118"
                android:textStyle="bold"
                android:visibility="invisible"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>